fixed align arrow in mobile version

--- a/site/src/css/navbar.css
+++ b/site/src/css/navbar.css
@@ -131,7 +131,7 @@
 
 .navbar-sidebar .navbar-sidebar__item:first-child .menu__link--active::before {
   content: url('/static/img/selected-arrow.svg');
-  top: -4px;
+  top: 5px;
   position: relative;
   margin-right: 0.375rem;
 }
